2001-12-17  jacob berkman  <jacob@ximian.com>

	* schemas/Makefile.am (EXTRA_DIST): add $(schama_DATA)

Fri Dec 14 16:20:16 2001  Jonathan Blandford  <jrb@redhat.com>

	* schemas: Move all GNOME schemas here.

2001-12-11  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Up to 1.108.0

2001-12-06  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* libgnome/gnome-program.c: Fix a typo in the API docs so they
	  now build correctly.

2001-11-28  jacob berkman  <jacob@ximian.com>

	* configure.in: install the schema into $DESTDIR

2001-11-27  Anders Carlsson  <andersca@gnu.org>

	* Makefile.am (SUBDIRS): Don't build tests directory.

	* configure.in: Up version to 1.107.0 and also up
	dependencies.

2001-11-18  Miles Lane  <miles@megapathdsl.net>

	* libgnome/gnome-program.h: 
	libgnome/Makefile.am : replace include of 
        gobject/gobject.h and gobject/genums.h with glib-object.h, 
	due to a change in gobject/gobject.h and gobject/genums.h
        that forces an #error for all direct includes.  
        This checkin was approved by Havoc.

2001-11-09  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added da to ALL_LINGUAS. (sorry for ignorance)

2001-11-09  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added zh_CN to ALL_LINGUAS.

2001-11-05  Maciej Stachowiak  <mjs@noisehavoc.org>

	* configure.in: Only use gnome-vfs module headers for help vfs
	module.

2001-11-03  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Up to 1.105.0 and up versions for some of the packages
	we require.

2001-11-02  Maciej Stachowiak  <mjs@noisehavoc.org>

	* configure.in: Import gnome-vfs module API. This is wrong and
	should be done only for the gnome-vfs module, but I'm too tired to
	fix it properly right now.

Thu Nov  1 16:14:11 2001  Jonathan Blandford  <jrb@redhat.com>

	* help-converters/docbook/docbook*: Remove at anders request; we
	need to count on packagers shipping this.

2001-11-01  jacob berkman  <jacob@ximian.com>
