@@ -1,4 +1,4 @@
-schemadir   = @GCONF_SCHEMA_FILE_DIR@
+schemadir   = $(GCONF_SCHEMA_FILE_DIR)
 schema_DATA = \
 	desktop_gnome_applications_browser.schemas		\
 	desktop_gnome_applications_editor.schemas		\
@@ -9,7 +9,10 @@ schema_DATA = \
 	desktop_gnome_peripherals_mouse.schemas			\
 	desktop_gnome_url_handlers.schemas
 
+# don't do this if we are building in eg. rpm
 install-data-local:
-	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/$(schema_DATA)
+	if test -z "$(DESTDIR)" ; then \
+		GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/$(schema_DATA) ; \
+	fi
 
 EXTRA_DIST = $(schema_DATA)
